@@ -34,7 +34,7 @@ public class UserResource {
     @GetMapping
     public ResponseEntity<List<UserDTO>> findAll() {
         return ResponseEntity.ok()
-            .body(userService.findAll().stream().map(x -> mapper.map(x, UserDTO.class)).toList());
+            .body(userService.findAll().stream().map(x -> mapper.map(x, UserDTO.class)).collect(Collectors.toList()));
     }
 
     @PostMapping
